@@ -2,6 +2,7 @@ open OUnit
 
 let all_tests =
   [
+    Test_unix.tests;
     Test_print.tests;
     Test_toplevel.tests;
     Test_pmap.tests;
